kubernetes/chensoul-cloud-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chensoul
---
kind: Service
apiVersion: v1
metadata:
  name: chensoul-mysql
  namespace: chensoul
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
---
kind: Endpoints
apiVersion: v1
metadata:
  name: chensoul-mysql
  namespace: chensoul
subsets:
  - addresses:
      - ip: 192.168.1.75
    ports:
      - port: 3306

---
kind: Service
apiVersion: v1
metadata:
  name: chensoul-redis
  namespace: chensoul
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
---
kind: Endpoints
apiVersion: v1
metadata:
  name: chensoul-redis
  namespace: chensoul
subsets:
  - addresses:
      - ip: 192.168.1.75
    ports:
      - port: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chensoul-nacos
  namespace: chensoul
spec:
  replicas: 1
  selector:
    matchLabels:
      name: chensoul-nacos
  template:
    metadata:
      labels:
        name: chensoul-nacos
    spec:
      containers:
        - name: chensoul-nacos
          imagePullPolicy: Always
          image: nacos/nacos-server
          ports:
            - containerPort: 8848
              name: http
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: chensoul-nacos
  namespace: chensoul
spec:
  ports:
    - name: http
      port: 8848
      targetPort: 8848
  selector:
    name: chensoul-nacos

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chensoul-monitor
  namespace: chensoul
spec:
  replicas: 1
  selector:
    matchLabels:
      name: chensoul-monitor
  template:
    metadata:
      labels:
        name: chensoul-monitor
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: chensoul-monitor
          image: soft/chensoul-monitor:1.1.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7000
          resources:
            requests:
              cpu: '0.3'
              memory: 300Mi
            limits:
              cpu: '1'
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chensoul-monitor
  namespace: chensoul
spec:
  selector:
    name: chensoul-monitor
  ports:
    - name: http
      port: 7000
      targetPort: 7000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chensoul-upms-service
  namespace: chensoul
spec:
  replicas: 1
  selector:
    matchLabels:
      name: chensoul-upms-service
  template:
    metadata:
      labels:
        name: chensoul-upms-service
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: chensoul-upms-service
          image: soft/chensoul-upms-service:1.1.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8010
          resources:
            requests:
              cpu: '0.3'
              memory: 300Mi
            limits:
              cpu: '1'
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chensoul-upms-service
  namespace: chensoul
spec:
  selector:
    name: chensoul-upms-service
  ports:
    - name: http
      port: 8010
      targetPort: 8010

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chensoul-task-service
  namespace: chensoul
spec:
  replicas: 1
  selector:
    matchLabels:
      name: chensoul-task-service
  template:
    metadata:
      labels:
        name: chensoul-task-service
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: chensoul
          image: soft/chensoul-task-service:1.1.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8020
          resources:
            requests:
              cpu: '0.3'
              memory: 300Mi
            limits:
              cpu: '1'
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chensoul-task-service
  namespace: chensoul
spec:
  selector:
    name: chensoul-task-service
  ports:
    - name: http
      port: 8020
      targetPort: 8020


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aeolian-lps-service
  namespace: chensoul
spec:
  replicas: 1
  selector:
    matchLabels:
      name: aeolian-lps-service
  template:
    metadata:
      labels:
        name: aeolian-lps-service
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: chensoul
          image: soft/aeolian-lps-service:1.1.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8030
          resources:
            requests:
              cpu: '0.3'
              memory: 300Mi
            limits:
              cpu: '1'
              memory: 500Mi

---
apiVersion: v1
kind: Service
metadata:
  name: aeolian-lps-service
  namespace: chensoul
spec:
  selector:
    name: aeolian-lps-service
  ports:
    - name: http
      port: 8030
      targetPort: 8030

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chensoul-auth
  namespace: chensoul
spec:
  replicas: 1
  selector:
    matchLabels:
      name: chensoul-auth
  template:
    metadata:
      labels:
        name: chensoul-auth
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: chensoul
          image: soft/chensoul-auth:1.1.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: '0.3'
              memory: 300Mi
            limits:
              cpu: '1'
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chensoul-auth
  namespace: chensoul
spec:
  selector:
    name: chensoul-auth
  ports:
    - name: http
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chensoul-gateway
  namespace: chensoul
spec:
  replicas: 1
  selector:
    matchLabels:
      name: chensoul-gateway
  template:
    metadata:
      labels:
        name: chensoul-gateway
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: chensoul
          image: soft/chensoul-gateway:1.1.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9999
          resources:
            requests:
              cpu: '0.3'
              memory: 300Mi
            limits:
              cpu: '1'
              memory: 500Mi

---
apiVersion: v1
kind: Service
metadata:
  name: chensoul-gateway
  namespace: chensoul
spec:
  selector:
    name: chensoul-gateway
  ports:
    - name: http
      port: 9999
      targetPort: 9999

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chensoul-web
  namespace: chensoul
spec:
  replicas: 1
  selector:
    matchLabels:
      name: chensoul-web
  template:
    metadata:
      labels:
        name: chensoul-web
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: chensoul
          image: soft/chensoul-cloud-web:1.1.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: '0.3'
              memory: 300Mi
            limits:
              cpu: '1'
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chensoul-web
  namespace: chensoul
spec:
  selector:
    name: chensoul-web
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chensoul-ingress
  namespace: chensoul
spec:
  rules:
    - host: api.chensoul.com
      http:
        paths:
          - path: /
            backend:
              serviceName: chensoul-gateway
              servicePort: 9999
    - host: web.chensoul.com
      http:
        paths:
          - path: /
            backend:
              serviceName: chensoul-web
              servicePort: 80
    - host: nacos.chensoul.com
      http:
        paths:
          - path: /
            backend:
              serviceName: chensoul-nacos
              servicePort: 8848
    - host: monitor.chensoul.com
      http:
        paths:
          - path: /
            backend:
              serviceName: chensoul-monitor
              servicePort: 7000
